chore: format code
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/choosing-a-plan.mdx
+++ b/src/content/docs/docs/getting-started/choosing-a-plan.mdx
@@ -10,7 +10,9 @@ import {Aside} from '@astrojs/starlight/components';
 Distr offers flexible subscription plans designed to match your distribution journey. Understanding which plan fits your current needs will help you get the most value from the platform.
 
 <Aside type="tip">
-  All new organizations start with a **30-day Pro Trial** - giving you full access to Pro features to evaluate Distr. Learn more in our [trial guide](/docs/getting-started/trial-guide/).
+  All new organizations start with a **30-day Pro Trial** - giving you full
+  access to Pro features to evaluate Distr. Learn more in our [trial
+  guide](/docs/getting-started/trial-guide/).
 </Aside>
 
 ## Starter Plan
@@ -20,19 +22,22 @@ Distr offers flexible subscription plans designed to match your distribution jou
 The Starter plan is perfect for teams testing the distribution flow with a small number of customers. Usually, this is one internal champion testing the flow. Agent-based installs and Docker make setup extremely fast — you ship updates quickly, iterate rapidly, and customers get the newest version immediately.
 
 **Ideal for:**
+
 - Fast learning and proving distribution works before scaling
 - Testing your first customer installations
 - Validating your self-hosted distribution strategy
 - Small teams with 1-3 customer deployments
 
 **Key characteristics:**
+
 - Up to 3 customer organizations
 - 1 deployment per customer
 - Focus on speed and simplicity
 - All users have admin privileges (no role management)
 
 <Aside type="note">
-  For detailed feature comparisons and limits, visit our [pricing page](https://distr.sh/pricing/).
+  For detailed feature comparisons and limits, visit our [pricing
+  page](https://distr.sh/pricing/).
 </Aside>
 
 ## Pro Plan
@@ -42,6 +47,7 @@ The Starter plan is perfect for teams testing the distribution flow with a small
 Platform/DevOps teams typically take over here. If scalability is important, deployments move to Kubernetes/Helm or Artifact-based distribution. Focus shifts from pure speed to control: version visibility, license enforcement, SSO/RBAC access control across both your team and your customers' teams.
 
 **Ideal for:**
+
 - Rolling out to multiple customers
 - Teams that need license management and version control
 - Organizations requiring role-based access control
@@ -49,6 +55,7 @@ Platform/DevOps teams typically take over here. If scalability is important, dep
 - Teams that want white-label customer portals
 
 **Key characteristics:**
+
 - Up to 100 customer organizations
 - 3 deployments per customer
 - License management for version control
@@ -57,7 +64,8 @@ Platform/DevOps teams typically take over here. If scalability is important, dep
 - White-label Distr
 
 <Aside type="tip">
-  Pro includes white glove onboarding to help you get started quickly with advanced features like license management and RBAC.
+  Pro includes white glove onboarding to help you get started quickly with
+  advanced features like license management and RBAC.
 </Aside>
 
 ## Enterprise Plan
@@ -67,6 +75,7 @@ Platform/DevOps teams typically take over here. If scalability is important, dep
 You're not just distributing software anymore — but also documentation, support portals, public images, automated workflows, dynamic licensing, usage-based billing and more — all inside one platform.
 
 **Ideal for:**
+
 - Organizations using Distr as their complete commercial platform
 - Companies needing unlimited scale
 - Teams requiring dedicated infrastructure
@@ -74,6 +83,7 @@ You're not just distributing software anymore — but also documentation, suppor
 - Companies requiring SLA guarantees and dedicated support
 
 **Key characteristics:**
+
 - Unlimited customer organizations, deployments, and users
 - Advanced features: License SDK, dynamic license management, customer billing
 - Custom roles and workflows
@@ -82,18 +92,21 @@ You're not just distributing software anymore — but also documentation, suppor
 - Dedicated support engineer and SLA
 
 <Aside type="note">
-  Enterprise plans include custom pricing based on your specific needs. [Contact us](https://distr.sh/contact/) to discuss Enterprise options.
+  Enterprise plans include custom pricing based on your specific needs. [Contact
+  us](https://distr.sh/contact/) to discuss Enterprise options.
 </Aside>
 
 ## Making Your Decision
 
 ### Start with Starter if:
+
 - ✅ You're testing your first customer installations
 - ✅ You have 3 or fewer customers
 - ✅ You want to validate your distribution strategy quickly
 - ✅ You don't need license management or advanced access controls yet
 
 ### Upgrade to Pro when:
+
 - ✅ You're rolling out to multiple customers (more than 3)
 - ✅ You need license management and version control
 - ✅ You require role-based access control for your team
@@ -101,6 +114,7 @@ You're not just distributing software anymore — but also documentation, suppor
 - ✅ You want to white-label Distr
 
 ### Consider Enterprise if:
+
 - ✅ Distr is your complete commercial platform
 - ✅ You need unlimited scale
 - ✅ You require dedicated infrastructure
@@ -122,4 +136,3 @@ For more information about self-hosting options, deployment methods, and how to 
 2. **Review pricing** - See current pricing and calculate costs on our [pricing page](https://distr.sh/pricing/).
 3. **Learn about trials** - Understand how the 30-day trial works in our [trial guide](/docs/getting-started/trial-guide/).
 4. **Manage your subscription** - Once you've chosen a plan, learn how to manage it in our [subscription management guide](/docs/product/subscription/).
-
