--- a/src/content/docs/docs/getting-started/trial-guide.mdx
+++ b/src/content/docs/docs/getting-started/trial-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: Free Trial Guide
-description: 'Learn how Distr''s 30-day Pro Trial works, what happens when it expires, and how to select a subscription plan.'
+description: "Learn how Distr's 30-day Pro Trial works, what happens when it expires, and how to select a subscription plan."
 sidebar:
   order: 6
 ---
@@ -19,7 +19,9 @@ When you create a new Distr organization, you automatically receive a **30-day P
 4. **Trial Expiration** - Your trial expires 30 days after organization creation
 
 <Aside type="tip">
-  During your trial period, you'll see a banner at the top of the Vendor Portal showing your trial end date. Make sure to select a subscription plan before your trial expires to avoid service interruption.
+  During your trial period, you'll see a banner at the top of the Vendor Portal
+  showing your trial end date. Make sure to select a subscription plan before
+  your trial expires to avoid service interruption.
 </Aside>
 
 ## What Happens When Your Trial Expires
@@ -32,7 +34,10 @@ If you haven't selected a subscription plan before your trial expires:
 4. **No Automatic Charges** - You won't be charged until you actively select a subscription plan
 
 <Aside type="caution">
-  Admin users will see subscription management options. Non-admin users will see a message explaining that subscription management requires admin privileges. Make sure at least one admin user selects a subscription before the trial expires.
+  Admin users will see subscription management options. Non-admin users will see
+  a message explaining that subscription management requires admin privileges.
+  Make sure at least one admin user selects a subscription before the trial
+  expires.
 </Aside>
 
 ## Selecting a Subscription During Trial
@@ -46,7 +51,9 @@ You can select a subscription plan at any time during your trial:
 5. Your subscription becomes active immediately
 
 <Aside type="tip">
-  If you select a subscription before your trial expires, your subscription period begins immediately. You won't lose any trial time - your paid subscription starts right away.
+  If you select a subscription before your trial expires, your subscription
+  period begins immediately. You won't lose any trial time - your paid
+  subscription starts right away.
 </Aside>
 
 ## Choosing the Right Plan
@@ -64,4 +71,3 @@ Learn more about [choosing the right plan](/docs/getting-started/choosing-a-plan
 - Review [subscription plans](/docs/getting-started/choosing-a-plan/) to understand which plan fits your needs
 - Visit our [pricing page](https://distr.sh/pricing/) for current pricing and feature comparisons
 - Learn how to [manage your subscription](/docs/product/subscription/) after selecting a plan
-
