--- a/src/content/docs/docs/guides/application-licenses.mdx
+++ b/src/content/docs/docs/guides/application-licenses.mdx
@@ -10,7 +10,10 @@ import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
 This guide walks you through how to use Application Licenses to control which application versions your end-customers can access and deploy through Distr agents.
 
 <Aside type="note">
-  Application Licenses are a Pro feature available in Pro, Enterprise, and Pro Trial plans. Learn more about [License Management](/docs/product/license-management/) and [subscription plans](/docs/product/subscription/).
+  Application Licenses are a Pro feature available in Pro, Enterprise, and Pro
+  Trial plans. Learn more about [License
+  Management](/docs/product/license-management/) and [subscription
+  plans](/docs/product/subscription/).
 </Aside>
 
 With Application Licenses, you can link a license to a customer, allowing access to specific application versions, whether it's one, a select few, or all available versions. You can name the license, set an expiration date, and assign it to a particular customer, giving you granular control over which applications and versions each end-customer can use.
@@ -65,4 +68,3 @@ If your images are stored in a private [OCI registry](/glossary/oci-container-ar
 ## Licensing walkthrough video
 
 [![Watch the video](../../../../assets/docs/guides/license-thumbnail.png)](https://www.youtube.com/watch?v=qh-ewkWxRj4)
-
