--- a/src/content/docs/docs/guides/artifact-licenses.mdx
+++ b/src/content/docs/docs/guides/artifact-licenses.mdx
@@ -10,13 +10,19 @@ import {Aside} from '@astrojs/starlight/components';
 This guide walks you through how to use Artifact Licenses to control which artifacts and tags your end-customers can access and pull from your Distr registry.
 
 <Aside type="note">
-  Artifact Licenses are a Pro feature available in Pro, Enterprise, and Pro Trial plans. Learn more about [License Management](/docs/product/license-management/) and [subscription plans](/docs/product/subscription/).
+  Artifact Licenses are a Pro feature available in Pro, Enterprise, and Pro
+  Trial plans. Learn more about [License
+  Management](/docs/product/license-management/) and [subscription
+  plans](/docs/product/subscription/).
 </Aside>
 
 With Artifact Licenses, you can control access to specific artifacts and their tags in your registry. You can grant access to all tags, specific tags, or future tags for one or multiple artifacts. Once you create your first artifact license, customers will only see artifacts they have a valid license for.
 
 <Aside type="caution">
-  Creating your first license will restrict what all your customers see. After you create your first license, your customers will only see artifacts which they have a valid license for. Without any license, your customers will see all artifacts and tags.
+  Creating your first license will restrict what all your customers see. After
+  you create your first license, your customers will only see artifacts which
+  they have a valid license for. Without any license, your customers will see
+  all artifacts and tags.
 </Aside>
 
 ## Use case
@@ -69,4 +75,3 @@ You can view and manage all your artifact licenses from the Artifact Licenses pa
 - **Set expiration dates** - Use expiration dates for time-limited access or trial periods
 - **Bundle related artifacts** - Group related artifacts in a single license for easier management
 - **Review regularly** - Periodically review licenses to ensure they match your current access policies
-
