--- a/src/content/docs/docs/product/license-management.mdx
+++ b/src/content/docs/docs/product/license-management.mdx
@@ -10,7 +10,11 @@ import {Aside} from '@astrojs/starlight/components';
 License Management is a powerful feature that gives you granular control over which application versions and artifacts each customer can access and deploy. With Distr's licensing system, you can create tiered access, deliver targeted updates, and manage customer entitlements with precision.
 
 <Aside type="note">
-  License Management is a **Pro feature** available in Pro, Enterprise, and Pro Trial plans. The Starter plan does not include license management capabilities. Learn more about [subscription plans](/docs/product/subscription/) and [choosing the right plan](/docs/getting-started/choosing-a-plan/).
+  License Management is a **Pro feature** available in Pro, Enterprise, and Pro
+  Trial plans. The Starter plan does not include license management
+  capabilities. Learn more about [subscription
+  plans](/docs/product/subscription/) and [choosing the right
+  plan](/docs/getting-started/choosing-a-plan/).
 </Aside>
 
 ## Overview
@@ -21,6 +25,7 @@ Distr's License Management system provides two types of licenses:
 2. **Artifact Licenses** - Control access to specific artifacts and tags in your registry
 
 Both license types allow you to:
+
 - Link licenses to specific customers
 - Set expiration dates
 - Grant access to specific versions, tags, or artifacts
@@ -71,6 +76,7 @@ To start using License Management:
    - [How to use Artifact Licenses](/docs/guides/artifact-licenses/)
 
 <Aside type="tip">
-  If you don't see the License Management feature, make sure you're on a Pro plan or Pro Trial. You can check your current plan in the [Subscription](/docs/product/subscription/) section.
+  If you don't see the License Management feature, make sure you're on a Pro
+  plan or Pro Trial. You can check your current plan in the
+  [Subscription](/docs/product/subscription/) section.
 </Aside>
-
