--- a/src/content/docs/docs/product/roles-and-user-management.mdx
+++ b/src/content/docs/docs/product/roles-and-user-management.mdx
@@ -10,7 +10,10 @@ import {Aside} from '@astrojs/starlight/components';
 Distr provides role-based access control (RBAC) to help you manage who can access and modify different parts of your organization. Understanding roles and permissions is essential for maintaining security and proper access control across your vendor organization and customer organizations.
 
 <Aside type="note">
-  Role-based access control is available in Pro, Enterprise, and Pro Trial plans. The Starter plan only allows one user per customer who will automatically have Administrator privileges. All internal users have Administrator privileges as well.
+  Role-based access control is available in Pro, Enterprise, and Pro Trial
+  plans. The Starter plan only allows one user per customer who will
+  automatically have Administrator privileges. All internal users have
+  Administrator privileges as well.
 </Aside>
 
 ## Overview of User Roles
@@ -27,45 +30,47 @@ Distr uses a role-based permission system with three standard roles that apply t
 
 Vendor roles apply to your internal team members who access the Vendor Portal.
 
-| Permission | Administrator | User | Viewer |
-|-----------|---------------|------|--------|
-| **View Dashboard** | ✅ | ✅ | ✅ |
-| **View Applications and Deployments** | ✅ | ✅ | ✅ |
-| **Edit Applications and Deployments** | ✅ | ✅ | ❌ |
-| **View Artifacts and Downoads** | ✅ | ✅ | ✅ |
-| **Create Personal Access Tokens** | ✅ | ✅ | ✅  |
-| **Push Artifacts** | ✅ | ✅ | ❌ |
-| **Pull Artifacts** | ✅ | ✅ | ✅ |
-| **View Licenses** | ✅ | ✅ | ✅ |
-| **Create/Edit/Delete Licenses** | ✅ | ✅ | ❌ |
-| **View Customers** | ✅ | ✅ | ✅ |
-| **Invite/Manage Customers** | ✅ | ✅ | ❌ |
-| **View Users** | ✅ | ❌ | ❌  |
-| **Invite/Manage Users** | ✅ | ❌ | ❌ |
-| **Manage Branding** | ✅ | ✅ | ❌ |
-| **View Subscription** | ✅ | ❌ | ❌ |
-| **Manage Subscription** | ✅ | ❌ | ❌ |
-| **View and Manage Org Settings** | ✅ | ❌ | ❌ |
+| Permission                            | Administrator | User | Viewer |
+| ------------------------------------- | ------------- | ---- | ------ |
+| **View Dashboard**                    | ✅            | ✅   | ✅     |
+| **View Applications and Deployments** | ✅            | ✅   | ✅     |
+| **Edit Applications and Deployments** | ✅            | ✅   | ❌     |
+| **View Artifacts and Downoads**       | ✅            | ✅   | ✅     |
+| **Create Personal Access Tokens**     | ✅            | ✅   | ✅     |
+| **Push Artifacts**                    | ✅            | ✅   | ❌     |
+| **Pull Artifacts**                    | ✅            | ✅   | ✅     |
+| **View Licenses**                     | ✅            | ✅   | ✅     |
+| **Create/Edit/Delete Licenses**       | ✅            | ✅   | ❌     |
+| **View Customers**                    | ✅            | ✅   | ✅     |
+| **Invite/Manage Customers**           | ✅            | ✅   | ❌     |
+| **View Users**                        | ✅            | ❌   | ❌     |
+| **Invite/Manage Users**               | ✅            | ❌   | ❌     |
+| **Manage Branding**                   | ✅            | ✅   | ❌     |
+| **View Subscription**                 | ✅            | ❌   | ❌     |
+| **Manage Subscription**               | ✅            | ❌   | ❌     |
+| **View and Manage Org Settings**      | ✅            | ❌   | ❌     |
 
 ### Customer Organization Roles
 
 Customer roles apply to end users who access the Customer Portal for a specific customer organization.
 
-| Permission | Administrator | User | Viewer |
-|-----------|---------------|------|--------|
-| **View Dashboard** | ✅ | ✅ | ✅ |
-| **View Deployments** | ✅ | ✅ | ✅ |
-| **Create/Edit/Delete Deployments** | ✅ | ✅ | ❌ |
-| **Create Personal Access Tokens** | ✅ | ✅ | ✅  |
-| **Push Artifacts** | ✅ | ✅ | ❌ |
-| **Pull Artifacts** | ✅ | ✅ | ✅ |
-| **View Documentation** | ✅ | ✅ | ✅ |
-| **View Users** | ✅ | ❌  | ❌ |
-| **Invite/Manage Users** | ✅ | ❌ | ❌ |
-| **Manage Customer Settings** | ✅ | ❌ | ❌ |
+| Permission                         | Administrator | User | Viewer |
+| ---------------------------------- | ------------- | ---- | ------ |
+| **View Dashboard**                 | ✅            | ✅   | ✅     |
+| **View Deployments**               | ✅            | ✅   | ✅     |
+| **Create/Edit/Delete Deployments** | ✅            | ✅   | ❌     |
+| **Create Personal Access Tokens**  | ✅            | ✅   | ✅     |
+| **Push Artifacts**                 | ✅            | ✅   | ❌     |
+| **Pull Artifacts**                 | ✅            | ✅   | ✅     |
+| **View Documentation**             | ✅            | ✅   | ✅     |
+| **View Users**                     | ✅            | ❌   | ❌     |
+| **Invite/Manage Users**            | ✅            | ❌   | ❌     |
+| **Manage Customer Settings**       | ✅            | ❌   | ❌     |
 
 <Aside type="tip">
-  Customer organization administrators can manage users within their own organization, but vendor administrators have full visibility and control over all customer organizations.
+  Customer organization administrators can manage users within their own
+  organization, but vendor administrators have full visibility and control over
+  all customer organizations.
 </Aside>
 
 ## How to Invite Users with Specific Roles
@@ -78,12 +83,13 @@ To add team members to your vendor organization:
 2. Navigate to the **Users** section in the sidebar
 3. Click **Add User** in the top right corner
 4. Enter the user's name, email address and select the role.
-6. Click **Submit**
+5. Click **Submit**
 
 The invited user will receive an email with a link to set up their account and password. Once they complete registration, they'll have access according to their assigned role.
 
 <Aside type="note">
-  In Starter plans, all users are automatically assigned the Administrator role, and the role selection dropdown is not available.
+  In Starter plans, all users are automatically assigned the Administrator role,
+  and the role selection dropdown is not available.
 </Aside>
 
 ### Inviting Customer Organization Users
@@ -93,9 +99,9 @@ To add users to a customer organization:
 1. Log in to the [Vendor Portal](https://app.distr.sh)
 2. Navigate to the **Customers** section in the sidebar
 3. Click on the "Manage Users" at customer organization you want to add users to
-5. Click **Invite User**
-6. Enter the user's name and email address and select the role.
-7. Click **Submit**
+4. Click **Invite User**
+5. Enter the user's name and email address and select the role.
+6. Click **Submit**
 
 Alternatively, customer organization administrators can invite users directly from the Customer Portal:
 
@@ -104,7 +110,6 @@ Alternatively, customer organization administrators can invite users directly fr
 3. Click **Add Use**
 4. Enter the name, email and select the role
 5. Click **Submitn**
-
 
 ## How Roles Differ Between Plans
 
@@ -120,7 +125,8 @@ Alternatively, customer organization administrators can invite users directly fr
 **Use case:** Ideal for small teams or POCs where simplified access control is sufficient.
 
 <Aside type="caution">
-  If you upgrade from Starter to Pro, existing users will automatically be assigned the Administrator role. You can then change their roles as needed.
+  If you upgrade from Starter to Pro, existing users will automatically be
+  assigned the Administrator role. You can then change their roles as needed.
 </Aside>
 
 ### Pro Plan
