--- a/src/content/docs/docs/product/subscription.mdx
+++ b/src/content/docs/docs/product/subscription.mdx
@@ -20,7 +20,8 @@ Distr provides three subscription tiers:
 For detailed feature comparisons, limits, and pricing, visit our [pricing page](https://distr.sh/pricing/). To understand which plan is right for your needs, see our guide on [choosing a plan](/docs/getting-started/choosing-a-plan/).
 
 <Aside type="tip">
-  New organizations start with a 30-day Pro Trial. Learn more about how trials work in our [trial guide](/docs/getting-started/trial-guide/).
+  New organizations start with a 30-day Pro Trial. Learn more about how trials
+  work in our [trial guide](/docs/getting-started/trial-guide/).
 </Aside>
 
 ## Managing Your Subscription
@@ -51,7 +52,8 @@ You can add customer organizations and internal users within your current subscr
 - **Self-Service** - These operations are available directly in the Vendor Portal without requiring plan changes
 
 <Aside type="tip">
-  Monitor your usage in the Subscription section to see how many customers and users you're currently using versus your plan limits.
+  Monitor your usage in the Subscription section to see how many customers and
+  users you're currently using versus your plan limits.
 </Aside>
 
 ### Updating Your Subscription
@@ -88,21 +90,22 @@ If you're on a Pro plan and add more customers on day 15 of a monthly billing cy
 - You immediately gain access to the additional customers
 
 #### Reducing Internal Users or Customers During a Billing Cycle
+
 When you downgrade your plan mid-cycle, the new plan and its limits take effect right away. To ensure a smooth transition, make sure your account is already within the limits of the plan you're switching to. If you currently have more customers or users than the new plan allows, you'll need to remove the excess before completing the downgrade.
 
 Once you're within the new plan's limits:
 
-- **Immediate Plan Change** – Your subscription updates right away  
-- **Continued Access** – You keep access to your remaining customers and users for the rest of the current billing cycle  
-- **Next Billing Cycle** – Your next month's invoice will simply reflect the price of your new plan  
+- **Immediate Plan Change** – Your subscription updates right away
+- **Continued Access** – You keep access to your remaining customers and users for the rest of the current billing cycle
+- **Next Billing Cycle** – Your next month's invoice will simply reflect the price of your new plan
 
 **Example:**  
 If you're on the Pro plan with 5 customers and want to move to a plan that allows 3 customers:
 
-- Reduce your customer count from 5 to 3  
-- Once you're at 3 customers, you can downgrade immediately  
-- You continue using the new plan for the rest of your current billing cycle  
-- Starting next month, your invoice reflects the new plan's pricing  
+- Reduce your customer count from 5 to 3
+- Once you're at 3 customers, you can downgrade immediately
+- You continue using the new plan for the rest of your current billing cycle
+- Starting next month, your invoice reflects the new plan's pricing
 
 ### Cancelling Your Subscription
 
@@ -116,7 +119,8 @@ Subscriptions can be cancelled through the Stripe Customer Portal:
 6. After cancellation, you'll lose access to paid features but can continue using the platform with Starter-tier limitations
 
 <Aside type="note">
-  After cancelling, you can reactivate your subscription through the Stripe Customer Portal or by selecting a new plan in the Vendor Portal.
+  After cancelling, you can reactivate your subscription through the Stripe
+  Customer Portal or by selecting a new plan in the Vendor Portal.
 </Aside>
 
 ## Understanding Usage Limits
@@ -161,8 +165,10 @@ Distr subscriptions support:
 - **Yearly Billing** - Charged yearly upfront (discounted pricing)
 
 <Aside type="note">
-Billing cycle changes (e.g., monthly to yearly or yearly to monthly) cannot be made through the Vendor Portal.
-To change your billing cycle, please contact our support team via email at **support@glasskube.com**. Our team will help you switch between monthly and yearly billing.
+  Billing cycle changes (e.g., monthly to yearly or yearly to monthly) cannot be
+  made through the Vendor Portal. To change your billing cycle, please contact
+  our support team via email at **support@glasskube.com**. Our team will help
+  you switch between monthly and yearly billing.
 </Aside>
 
 ### Invoices
@@ -179,5 +185,6 @@ To change your billing cycle, please contact our support team via email at **sup
 - **Auto-renewal** - Subscriptions automatically renew unless cancelled
 
 <Aside type="note">
-  For Enterprise customers, custom payment terms and methods may be available. Contact your account representative for details.
+  For Enterprise customers, custom payment terms and methods may be available.
+  Contact your account representative for details.
 </Aside>
