fix: link struture
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/blog/distr-tutorials.mdx
+++ b/src/content/blog/distr-tutorials.mdx
@@ -61,7 +61,7 @@ We split up the onboarding process into smaller, more manageable steps, based on
   darkSrc={tutorialsDark}
 />
 
-Find more information about the tutorials in the [Distr quickstart](https://distr.sh/docs/getting-started/quickstart/).
+Find more information about the tutorials in the [Distr quickstart](/docs/quickstart/).
 
 ## Introducing the `hello-distr` sample application
 
