--- a/src/content/docs/docs/getting-started/free-trial.mdx
+++ b/src/content/docs/docs/getting-started/free-trial.mdx
@@ -1,8 +1,9 @@
 ---
-title: Free Trial Guide
+title: Free Trial
 description: "Learn how Distr's 30-day Pro Trial works, what happens when it expires, and how to select a subscription plan."
+slug: docs/free-trial
 sidebar:
-  order: 6
+  order: 3
 ---
 
 import {Aside} from '@astrojs/starlight/components';
@@ -64,10 +65,10 @@ Not sure which plan to choose? Consider:
 - **Pro** - If you're rolling out to multiple customers and need license management and RBAC
 - **Enterprise** - If Distr is your complete commercial platform with unlimited scale needs
 
-Learn more about [choosing the right plan](/docs/getting-started/choosing-a-plan/) for your needs.
+Learn more about [choosing the right plan](/docs/subscription/) for your needs.
 
 ## Next Steps
 
-- Review [subscription plans](/docs/getting-started/choosing-a-plan/) to understand which plan fits your needs
+- Review [subscription plans](/docs/subscription/) to understand which plan fits your needs
 - Visit our [pricing page](https://distr.sh/pricing/) for current pricing and feature comparisons
 - Learn how to [manage your subscription](/docs/product/subscription/) after selecting a plan
