--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -1,8 +1,9 @@
 ---
 title: Quickstart
 description: Complete three interactive tutorials to set up your registry, deploy your first application, and onboard your first customer.
+slug: docs/quickstart
 sidebar:
-  order: 3
+  order: 4
 ---
 
 import {Aside} from '@astrojs/starlight/components';
