--- a/src/content/docs/docs/getting-started/subscription.mdx
+++ b/src/content/docs/docs/getting-started/subscription.mdx
@@ -1,6 +1,7 @@
 ---
 title: Choosing a Plan
 description: 'Learn which Distr subscription plan is right for your stage: validating your first POCs, rolling out to multiple customers, or building a complete commercial self-hosted delivery suite.'
+slug: docs/subscription
 sidebar:
   order: 5
 ---
@@ -12,7 +13,7 @@ Distr offers flexible subscription plans designed to match your distribution jou
 <Aside type="tip">
   All new organizations start with a **30-day Pro Trial** - giving you full
   access to Pro features to evaluate Distr. Learn more in our [trial
-  guide](/docs/getting-started/trial-guide/).
+  guide](/docs/free-trial/).
 </Aside>
 
 ## Starter Plan
@@ -134,5 +135,5 @@ For more information about self-hosting options, deployment methods, and how to 
 
 1. **Start your trial** - All new organizations get a 30-day Pro Trial. [Create your account](https://signup.distr.sh) to begin.
 2. **Review pricing** - See current pricing and calculate costs on our [pricing page](https://distr.sh/pricing/).
-3. **Learn about trials** - Understand how the 30-day trial works in our [trial guide](/docs/getting-started/trial-guide/).
+3. **Learn about trials** - Understand how the 30-day trial works in our [trial guide](/docs/free-trial/).
 4. **Manage your subscription** - Once you've chosen a plan, learn how to manage it in our [subscription management guide](/docs/product/subscription/).
