--- a/src/content/docs/docs/index.mdx
+++ b/src/content/docs/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../../assets/distr.svg
   actions:
     - text: What is Distr?
-      link: /docs/getting-started/what-is-distr/
+      link: /docs/
       icon: right-arrow
     - text: View on GitHub
       link: https://github.com/glasskube/distr
