--- a/src/content/docs/docs/product/license-management.mdx
+++ b/src/content/docs/docs/product/license-management.mdx
@@ -14,7 +14,7 @@ License Management is a powerful feature that gives you granular control over wh
   Trial plans. The Starter plan does not include license management
   capabilities. Learn more about [subscription
   plans](/docs/product/subscription/) and [choosing the right
-  plan](/docs/getting-started/choosing-a-plan/).
+  plan](/docs/subscription/).
 </Aside>
 
 ## Overview
