--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -50,8 +50,8 @@ Use it to publish versioned artifacts, enforce licensing rules, and track consum
 
 <Aside type="note">
   If you haven’t set up your registry yet, start with the [in-platform
-  tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials)
-  or follow the [Quickstart Guide](/docs/guides/container-registry/).
+  tutorials](/docs/quickstart/#getting-started-with-platform-tutorials) or
+  follow the [Quickstart Guide](/docs/guides/container-registry/).
 </Aside>
 
 Want a quick overview of how it works? Watch this short walkthrough:
