--- a/src/content/docs/docs/product/subscription.mdx
+++ b/src/content/docs/docs/product/subscription.mdx
@@ -17,11 +17,11 @@ Distr provides three subscription tiers:
 - **Pro** - For rolling out to multiple customers with license management and RBAC
 - **Enterprise** - For organizations using Distr as their complete commercial platform
 
-For detailed feature comparisons, limits, and pricing, visit our [pricing page](https://distr.sh/pricing/). To understand which plan is right for your needs, see our guide on [choosing a plan](/docs/getting-started/choosing-a-plan/).
+For detailed feature comparisons, limits, and pricing, visit our [pricing page](https://distr.sh/pricing/). To understand which plan is right for your needs, see our guide on [choosing a plan](/docs/subscription/).
 
 <Aside type="tip">
   New organizations start with a 30-day Pro Trial. Learn more about how trials
-  work in our [trial guide](/docs/getting-started/trial-guide/).
+  work in our [trial guide](/docs/free-trial/).
 </Aside>
 
 ## Managing Your Subscription
@@ -99,7 +99,7 @@ Once you're within the new plan's limits:
 - **Continued Access** – You keep access to your remaining customers and users for the rest of the current billing cycle
 - **Next Billing Cycle** – Your next month's invoice will simply reflect the price of your new plan
 
-**Example:**  
+**Example:**
 If you're on the Pro plan with 5 customers and want to move to a plan that allows 3 customers:
 
 - Reduce your customer count from 5 to 3
