--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -19,7 +19,7 @@ The Vendor Portal serves as the control plane for vendors, providing access to a
 
 ## Key Features
 
-1. **Tutorials**: Start with the [Quickstart](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials) to get familiar with the platform.
+1. **Tutorials**: Start with the [Quickstart](/docs/quickstart/#getting-started-with-platform-tutorials) to get familiar with the platform.
 2. **Dashboard**: View health status for agents and artifacts across all deployments.
 3. **Agents**: Use the [Agents](/docs/product/agents/) section to add applications, configure deployments monitor the health and view deployment logs.
 4. **Registry**: Browse and view consumption metrics of your [artifacts](/docs/product/registry/) in the _Registry_ section.
