--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -1,7 +1,7 @@
 ---
 title: What is Distr?
 description: Distr is an open source software distribution platform for software vendors to distribute, deploy, and manage software in self-managed customer environments, air-gapped, BYOC, and edge environments. Giving vendors and end customer control and visibility over their self-managed deployments.
-slug: docs/getting-started/what-is-distr
+slug: docs
 sidebar:
   order: 1
 banner:
@@ -61,7 +61,7 @@ Distr enables you to:
 
 ## Where do I start?
 
-Get started with Distr in minutes. Follow the [quickstart guide](/docs/getting-started/quickstart/) to complete your first tutorials and learn how to use the platform effectively.
+Get started with Distr in minutes. Follow the [quickstart guide](/docs/quickstart/) to complete your first tutorials and learn how to use the platform effectively.
 
 <Aside type="note">
   Ready to begin? Create your Distr account [here](/get-started/) and follow the
