--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -28,7 +28,8 @@ Configure your applications and customize the deployment experience:
 
 Manage customer access and their deployment experience:
 
-- **[License Management](/docs/guides/license-mgmt/)** - Control which application versions customers can access
+- **[Application Licenses](/docs/guides/application-licenses/)** - Control which application versions customers can access and deploy
+- **[Artifact Licenses](/docs/guides/artifact-licenses/)** - Control which artifacts and tags customers can access in your registry
 - **[End-Customer View of Distr](/docs/guides/container-registry-for-end-customers/)** - Understanding the customer portal experience
 
 ## Platform Setup
