--- a/src/content/docs/docs/product/rbac.mdx
+++ b/src/content/docs/docs/product/rbac.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Roles and User Management'
+title: 'Role-Based Access Control (RBAC)'
 description: 'Understand user roles and permissions, invite users with specific roles, manage access control, and learn how roles differ across subscription plans.'
 sidebar:
-  order: 7
+  order: 6
 ---
 
 import {Aside} from '@astrojs/starlight/components';
