--- a/src/content/docs/docs/product/subscription-management.mdx
+++ b/src/content/docs/docs/product/subscription-management.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Subscription'
+title: 'Subscription Management'
 description: 'Manage your Distr subscription, add or remove users and customers, view invoices, and handle billing through the Vendor Portal and Stripe.'
 sidebar:
-  order: 6
+  order: 7
 ---
 
 import {Aside} from '@astrojs/starlight/components';
