--- a/src/content/docs/docs/getting-started/free-trial.mdx
+++ b/src/content/docs/docs/getting-started/free-trial.mdx
@@ -8,7 +8,7 @@ sidebar:
 
 import {Aside} from '@astrojs/starlight/components';
 
-All new Distr organizations automatically receive a **30-day Pro Trial**, giving you full access to Pro features to evaluate the platform without requiring a credit card.
+All new Distr organizations automatically receive a **30-day Pro Unlimited Trial**, giving you full access to Pro features to evaluate the platform without requiring a credit card.
 
 ## How Trials Work
 
