--- a/src/content/docs/docs/getting-started/free-trial.mdx
+++ b/src/content/docs/docs/getting-started/free-trial.mdx
@@ -12,7 +12,7 @@ All new Distr organizations automatically receive a **30-day Pro Unlimited Trial
 
 ## How Trials Work
 
-When you create a new Distr organization, you automatically receive a **30-day Pro Trial**:
+When you create a new Distr organization, you automatically receive a **30-day Pro Unlimited Trial**:
 
 1. **Full Feature Access** - You have access to all Pro features during the trial period
 2. **No Credit Card Required** - Start using Distr immediately without payment
