--- a/src/content/docs/docs/getting-started/free-trial.mdx
+++ b/src/content/docs/docs/getting-started/free-trial.mdx
@@ -45,7 +45,7 @@ If you haven't selected a subscription plan before your trial expires:
 
 You can select a subscription plan at any time during your trial:
 
-1. Navigate to the **Subscription** section in the Vendor Portal sidebar
+1. Navigate to the **Subscription** page in the Vendor Portal
 2. Review available plans (Starter, Pro, Enterprise)
 3. Select your preferred plan
 4. Complete checkout via Stripe
