--- a/src/content/docs/docs/getting-started/free-trial.mdx
+++ b/src/content/docs/docs/getting-started/free-trial.mdx
@@ -70,5 +70,5 @@ Learn more about [choosing the right plan](/docs/subscription/) for your needs.
 ## Next Steps
 
 - Review [subscription plans](/docs/subscription/) to understand which plan fits your needs
-- Visit our [pricing page](https://distr.sh/pricing/) for current pricing and feature comparisons
+- Visit our [pricing page](/pricing/) for current pricing and feature comparisons
 - Learn how to [manage your subscription](/docs/product/subscription-management/) after selecting a plan
