--- a/src/content/docs/docs/product/subscription-management.mdx
+++ b/src/content/docs/docs/product/subscription-management.mdx
@@ -157,7 +157,7 @@ All billing operations are managed through the Stripe Customer Portal:
    - View payment history
    - Cancel your subscription
 
-### Billing Cycles
+### Subscription Periods
 
 Distr subscriptions support:
 
