chore: upgrade astro
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -8,6 +8,10 @@ banner:
   content: |
     The <a href="/docs/integrations/mcp/">Distr MCP server</a> is now available as a remote MCP server and is hosted on <a href="https://hyprmcp.com/" target="_blank">https://hyprmcp.com</a>.
 tableOfContents: false
+prev: false
+next:
+  label: Core Concepts
+  link: /docs/getting-started/core-concepts/
 ---
 
 import {Aside} from '@astrojs/starlight/components';
